[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/misc/SeeingRocket.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/circle.svg" type="Texture" id=2]
[ext_resource path="res://assets/resources/rocket_physics.tres" type="PhysicsMaterial" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.36036 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.184685 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.63964 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.682353, 0.356863, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[node name="SeeingRocket" type="RigidBody2D"]
position = Vector2( 146.57, 118.326 )
physics_material_override = ExtResource( 3 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.3
script = ExtResource( 1 )

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
local_coords = false
direction = Vector2( -1, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.1
angle = 45.0
scale_amount = 8.0
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="ParticlesTorque" type="CPUParticles2D" parent="."]
position = Vector2( 12, 0 )
emitting = false
amount = 32
lifetime = 0.5
lifetime_randomness = 0.2
local_coords = false
direction = Vector2( 0, 1 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.1
angle = 45.0
scale_amount = 8.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.109804, 0.109804, 0.109804, 1 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="Sight" type="TextureProgress" parent="Sprite"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
max_value = 360.0
value = 90.0
texture_progress = ExtResource( 2 )
fill_mode = 8
tint_progress = Color( 0.411765, 0.972549, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="UI" type="Line2D" parent="."]
points = PoolVector2Array( 16, -32, 16, -16, 48, -16 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="FuelBar" type="ProgressBar" parent="UI"]
margin_left = 19.3306
margin_top = -22.7988
margin_right = 60.3306
margin_bottom = -18.7988
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
